Fix Jansi warning on later Java versions